<resources>
    <string name="app_name">Test yellow stone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start game</string>
    <string name="shuffle">Shuffle</string>
    <string name="game_1">Game 1</string>
    <string name="game_2">Game 2</string>
    <string name="game_3">Game 3</string>
    <string name="game_4">Game 4</string>
    <string name="game_5">Game 5</string>
    <string name="game">Game:\u0020</string>
</resources>
