<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.fragment.MainMenuFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llGame1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_android" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/game_1"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGame2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bug" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/game_2"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGame3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cake" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/game_3"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGame4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/game_4"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGame5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mouse" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/game_5"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>